# Titanfall-2-BSP-editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  build.ninja  cmake_install.cmake
.devcontainer/: devcontainer.json
src/: main.cpp
src/app/: main.cpp
src/app/titanfall2bspData/: SettingsDialog.cpp  SettingsDialog.h  enums.h  helperfunctions.h  openGL.h  structs.h
src/titanfall2bspData/: enums.h  structs.h
